# CustomNumberCPP

./: .gitignore  README.md
implementation/: CMakeLists.txt
implementation/application/: CMakeLists.txt  test.cpp
implementation/custom-number/: CMakeLists.txt
implementation/custom-number/include/: CustomNumber.hpp  CustomNumberManager.hpp  CustomNumberOperations.hpp
implementation/custom-number/source/: CustomNumber.cpp  CustomNumberManager.cpp
implementation/neural-network/: CMakeLists.txt
implementation/neural-network/include/: AbstractModule.hpp
